# whey

./: .gitignore  LICENSE  README.md  TODO.txt  compiler.py
WheyVM/: CMakeLists.txt  Frame.h  InstructionSet.h  Makefile  OpCodes.h  Operand.h  WheyVM.h  compiler.py  main.c
WheyVM/Operand/: Array.h  Double.h  Gc.h  Map.h  Object.h  Pair.h  String.h  Types.h
WheyVM/Operand/src/: Array.c  Double.c  Gc.c  Integer.c  Map.c  Object.c  Pair.c  String.c
WheyVM/Operand/test/: ObjectTest.c
WheyVM/WcFile/: Constant.h  Function.h
WheyVM/WcFile/src/: Constant.c  Function.c  WcFile.c
WheyVM/WcFile/test/: WcFileTest.c  allconstants.txt  allconstants.wc  completefile.txt  completefile.wc  double.wc  empty.wc  integer.txt  integer.wc  multiplefunctions.txt  multiplefunctions.wc  onefunction.txt  onefunction.wc  string.txt
WheyVM/examples/: integers.txt  integers.wc  permutations.txt  permutations.wc  primes.txt  primes.wc  sum.txt  sum.wc  wordcount.txt  wordcount.wc
WheyVM/lib/Operand/: Array.h  Object.h  Operand.h  Pair.h
WheyVM/lib/WcFile/: WcFile.h
WheyVM/src/: Array.c  Array.h  Closure.h  Constant.h  Field.h  Frame.c  Frame.h  Function.h  GC.c  GC.h  InstructionSet.c  Instructions.h  Lambda.h  Map.c  Map.h  Object.c  Object.h  OpCode.h  Operand.h  Pair.c  Pair.h  Thread.h  Utf8.h  WFile.h  Whey.h  WheyVM.c  WheyVM.h  main.c
WheyVM/src/ByteCode/: ByteCode.h  Constant.h
WheyVM/src/Constant/: Constant.h  Function.h  StringConstant.h
WheyVM/src/ConstantPool/: Constant.h  StringConstant.h
WheyVM/src/GC/: Gc.c  Gc.h
WheyVM/src/Object/: Array.h  Floating.h  (+8 more)
(+125 files in other folders)
